Remove resume and add mobile-first styles

--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -1,3 +1,17 @@
+// Breakpoints
+
+@mixin media-sm() {
+  @media not all and (min-width: $breakpoint-lg) {
+    @content;
+  }
+}
+
+@mixin media-lg() {
+  @media (min-width: $breakpoint-lg) {
+    @content;
+  }
+}
+
 // Links
 
 @mixin link-reset($color, $text-decoration: null) {
