--- a/src/styles/layout/_site-header.scss
+++ b/src/styles/layout/_site-header.scss
@@ -5,7 +5,7 @@
   padding-top: 7.2rem;
 
   .subtitle {
-    margin-bottom: 2rem; // TODO: Utility class?
+    margin-bottom: 0; // TODO: Utility class?
   }
 }
 
