--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -63,8 +63,7 @@ h6 {
 }
 
 hr {
-  // TODO: Make this a color var
-  border-top: 1px solid #c1c1c1;
+  border-top: 1px solid $divider-color;
 }
 
 p {
