--- a/src/styles/utility/_typography.scss
+++ b/src/styles/utility/_typography.scss
@@ -10,6 +10,10 @@
   color: $color-secondary;
 }
 
+.color-tertiary {
+  color: $color-tertiary;
+}
+
 .list-style-none {
   list-style: none;
   margin: 0;
