--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,16 +4,19 @@
 @import "./base/html";
 @import "./base/typography";
 @import "./layout/content";
-@import "./layout/site-nav";
-@import "./layout/site-footer";
-@import "./layout/site-header";
 @import "./utility/flex";
 @import "./utility/spacing";
 @import "./utility/typography";
 @import "./components/card";
 @import "./components/intro";
+@import "./components/layout/footer";
+@import "./components/layout/header";
+@import "./components/layout/nav-menu";
+@import "./components/layout/title";
 @import "./components/page";
 @import "./components/projects";
 @import "./components/social-menu";
 @import "./components/thoughts/latest";
 @import "./components/thoughts/thought";
+@import "./components/toggle";
+@import "./components/toggle-icons";
