--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -1,3 +1,7 @@
 .page__heading {
-  margin-bottom: 7.2rem;
+  margin: 4rem 0 6rem;
+
+  #{$html-color-mode-dark} & {
+    color: $color;    
+  }
 }
