--- a/src/styles/components/thoughts/_thought.scss
+++ b/src/styles/components/thoughts/_thought.scss
@@ -1,29 +1,52 @@
+.thought {
+  #{$html-color-mode-dark} & a {
+    @include link-reset($color: lighten($color, 16%));
+
+    &:hover {
+      color: $color;
+    }
+  }
+}
+
 .thought-date {
   color: lighten($fg-color-light, 39%);
   margin-bottom: 1rem;
 }
 
 .thought-link {
-  @include link-reset(
-    $color: darken($color-secondary, 16%),
-    $text-decoration: none
-  );
+  @include link-reset($color: darken($color-secondary, 16%));
 
   border-bottom-color: $color-secondary;
+
+  #{$html-color-mode-dark} & {
+    @include link-reset($color: $color-secondary);
+
+    &:hover {
+      color: darken($color-secondary, 16%);
+    }
+  }
 
   &:hover {
     border-bottom-color: darken($color-secondary, 16%);
     color: darken($color-secondary, 16%);
   }
+}
 
-  &--heading {
-    @include link-reset($color: $fg-color-light);
+.thought-link--heading {
+  @include link-reset($color: $fg-color-light);
 
-    border-bottom: none;
+  border-bottom: none;
+
+  #{$html-color-mode-dark} & {
+    @include link-reset($color: $color-secondary);
 
     &:hover {
-      color: $color-secondary;
+      color: darken($color-secondary, 16%);
     }
+  }
+
+  &:hover {
+    color: $color-secondary;
   }
 }
 
