--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,12 +1,12 @@
 a {
-  @include link-reset($color: $color, $text-decoration: none);
+  @include link-reset($color: darken($color, 16%), $text-decoration: none);
 
   border-bottom: 4px solid $color;
   display: inline-block;
 
   &:hover {
-    border-bottom-color: darken($color, 16%);
-    color: darken($color, 16%);
+    border-bottom-color: darken($color, 32%);
+    color: darken($color, 32%);
   }
 }
 
