Clean up CSS and usage

--- a/src/styles/base/_html.scss
+++ b/src/styles/base/_html.scss
@@ -9,21 +9,21 @@ html {
 }
 
 body {
-  background-color: $bg-color-light;
+  background-color: $bg-color;
   background-image: url("/images/symbols-light.svg");
   background-repeat: repeat-x;
-  color: $fg-color-light;
+  color: $fg-color;
   font-family: Nunito, sans-serif;
   font-size: 1.7rem;
   font-weight: 400;
 
-  #{$html-color-mode-dark} & {
-    background-color: $bg-color-dark;
-    color: $fg-color-dark;
+  #{$dark-mode-selector} & {
+    background-color: $bg-color-dark-mode;
+    color: $fg-color-dark-mode;
     background-image: url("/images/symbols-dark.svg");
   }
 }
 
 main {
-  margin-bottom: 7.2rem; // TODO: Abstract this value
+  margin-bottom: $section-bottom-margin;
 }
