--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -10,7 +10,7 @@ html {
 
 p {
   line-height: 3rem;
-  margin: 0 0 1.3rem;
+  margin: 0 0 $paragraph-bottom-margin;
 
   a {
     line-height: 2rem;
