--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,10 +1,9 @@
 .intro {
-  // TODO: Abstract this, if it makes sense as a common pattern
-  margin-bottom: 7.2rem;
+  margin-bottom: $section-bottom-margin;
 }
 
 .intro__photo {
-  border: 4px solid $color;
+  border: 4px solid $color-primary;
   border-radius: 50%;
   float: right;
   height: 7.2rem;
