--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -1,7 +1,7 @@
 .page__heading {
   margin: 4rem 0;
 
-  #{$html-color-mode-dark} & {
-    color: $color;    
+  #{$dark-mode-selector} & {
+    color: $color-primary;    
   }
 }
