--- a/src/styles/components/_social-menu.scss
+++ b/src/styles/components/_social-menu.scss
@@ -1,8 +1,8 @@
 .social-menu {
-  @include list-style-none;
+  @include list-style-reset();
 }
 
 .social-menu__item {
   font-size: 2rem;
-  margin: 0 2rem 1.3rem 0;
+  margin: 0 2rem $paragraph-bottom-margin 0;
 }
