--- a/src/styles/components/_toggle.scss
+++ b/src/styles/components/_toggle.scss
@@ -4,14 +4,14 @@ $switch-increment: 3rem;
   position: relative;
 
   .toggle-icons {
-    color: $color;
+    color: $color-primary;
     position: relative;
     top: -1rem;
   }
 }
 
 .toggle__bar {
-  background-color: $color;
+  background-color: $color-primary;
   height: 0.6rem;
   width: 8rem;
 }
@@ -21,13 +21,13 @@ $switch-increment: 3rem;
 }
 
 .toggle__switch {
-  border: 1px solid $color;
+  border: 1px solid $color-primary;
   border-radius: 50%;
   box-shadow: 0px 1px 2px rgb(0 0 0 / 15%);
   cursor: pointer;
   height: 2rem;
   position: relative;
-  top: -1.3rem;
+  top: -$paragraph-bottom-margin;
   width: 2rem;
 
   &:focus {
