--- a/src/styles/components/layout/_title.scss
+++ b/src/styles/components/layout/_title.scss
@@ -1,14 +1,9 @@
 .site-title__link {
-  @include link-reset($color: $color);
-  
-  border-bottom: none;
-  text-decoration: none;
+  @include link-reset($color: $color-primary, $hover-color: $color-primary);
 
-  &:hover {
-    color: $color;
-  }
+  border-bottom: none;
 }
 
 .site-title__name {
-  margin: 0 0 1.3rem;
+  margin: 0 0 $paragraph-bottom-margin;
 }
