--- a/src/styles/utility/_typography.scss
+++ b/src/styles/utility/_typography.scss
@@ -1,44 +1,17 @@
 .color-fg {
-  color: $fg-color-light;
+  color: $fg-color;
 
-  #{$html-color-mode-dark} & {
-    color: $fg-color-dark;
+  #{$dark-mode-selector} & {
+    color: $fg-color-dark-mode;
   }
-}
-
-.color-primary {
-  color: $color;
 }
 
 .color-secondary {
   color: $color-secondary;
 }
 
-.color-tertiary {
-  color: $color-tertiary;
-}
-
-.list-style-none {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .hide-sm {
   @include media-sm() {
     display: none;
   }
-}
-
-.screen-reader-only {
-  height: 1px;
-  left: -10000px;
-  overflow: hidden;
-  position: absolute;
-  top: auto;
-  width: 1px;
-}
-
-.upcase {
-  text-transform: uppercase;
 }
