--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -25,7 +25,8 @@ h6 {
   margin: 0;
 }
 
-h1 {
+h1,
+.h1 {
   font-family: Montserrat, sans-serif;
   font-size: 4.2rem;
 
@@ -34,7 +35,8 @@ h1 {
   }
 }
 
-h2 {
+h2,
+.h2 {
   font-size: 2.8rem;
 
   @include media-lg() {
@@ -42,7 +44,8 @@ h2 {
   }
 }
 
-h3 {
+h3,
+.h3 {
   font-size: 2.4rem;
 
   @include media-lg() {
@@ -50,7 +53,8 @@ h3 {
   }
 }
 
-h4 {
+h4,
+.h4 {
   font-size: 2.2rem;
 
   @include media-lg() {
@@ -58,11 +62,13 @@ h4 {
   }
 }
 
-h5 {
+h5,
+.h5 {
   font-size: 2rem;
 }
 
-h6 {
+h6,
+.h6 {
   font-size: 1.9rem;
 }
 
