--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -2,6 +2,14 @@
   margin-bottom: $section-bottom-margin;
 }
 
+.intro__heading {
+  margin: 4rem 0 1rem;
+
+  #{$dark-mode-selector} & {
+    color: $color-primary;
+  }
+}
+
 .intro__photo {
   border: 4px solid $color-primary;
   border-radius: 50%;
