--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -1,7 +1,7 @@
 // Breakpoints
 
 @mixin media-sm() {
-  @media not all and (min-width: $breakpoint-lg) {
+  @media (max-width: $breakpoint-lg) {
     @content;
   }
 }
@@ -18,9 +18,10 @@
   &:active,
   &:link,
   &:visited  {
-    border-bottom-color: $color;
     color: $color;
   }
+  
+  border-bottom-color: $color;
 
   @if $hover-color {
     &:focus,
