--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,6 @@
 @import "./base/fonts";
 @import "./base/html";
 @import "./base/typography";
-@import "./layout/content";
-@import "./utility/flex";
-@import "./utility/spacing";
-@import "./utility/typography";
 @import "./components/card";
 @import "./components/intro";
 @import "./components/layout/footer";
@@ -16,6 +12,12 @@
 @import "./components/page";
 @import "./components/social-menu";
 @import "./components/thoughts/latest";
+@import "./components/thoughts/preview";
 @import "./components/thoughts/thought";
 @import "./components/toggle";
 @import "./components/toggle-icons";
+@import "./layout/content";
+@import "./utility/display";
+@import "./utility/flex";
+@import "./utility/spacing";
+@import "./utility/typography";
