--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -68,7 +68,7 @@ $nav-item-color-active: $light-tint;
 
 // Spacing
 
-$paragraph-bottom-margin: 1.3rem;
+$base-bottom-margin: 1.3rem;
 $section-bottom-margin: 7.2rem;
 
 // Sizing
