--- a/src/styles/components/_social-menu.scss
+++ b/src/styles/components/_social-menu.scss
@@ -4,5 +4,5 @@
 
 .social-menu__item {
   font-size: 2rem;
-  margin: 0 2rem $paragraph-bottom-margin 0;
+  margin: 0 2rem $base-bottom-margin 0;
 }
