--- a/src/styles/components/_toggle.scss
+++ b/src/styles/components/_toggle.scss
@@ -27,7 +27,7 @@ $switch-increment: 3rem;
   cursor: pointer;
   height: 2rem;
   position: relative;
-  top: -$paragraph-bottom-margin;
+  top: -$base-bottom-margin;
   width: 2rem;
 
   &:focus {
