--- a/src/styles/components/layout/_footer.scss
+++ b/src/styles/components/layout/_footer.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.site-footer__connect {
+  margin: 0 auto;
+}
+
 .site-footer__description {
   order: 1;
 
@@ -51,5 +55,5 @@
 
 .site-footer__social-menu-item {
   font-size: 2rem;
-  margin: 0 2rem $paragraph-bottom-margin 0;
+  margin-right: 2rem;
 }
