--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,6 +1,13 @@
 @font-face {
   font-family: Montserrat;
   font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype")
+}
+
+@font-face {
+  font-family: Montserrat;
+  font-style: normal;
   font-weight: 800;
   src: url("/fonts/Montserrat/Montserrat-ExtraBold.ttf") format("truetype")
 }
