--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -21,14 +21,13 @@ h4,
 h5,
 h6 {
   font-family: Montserrat, sans-serif;
-  font-weight: 800;
   margin: 0;
 }
 
 h1,
 .h1 {
-  font-family: Montserrat, sans-serif;
   font-size: 4.2rem;
+  font-weight: 800;
 
   @include media-lg() {
     font-size: 6.4rem;
@@ -38,6 +37,7 @@ h1,
 h2,
 .h2 {
   font-size: 2.8rem;
+  font-weight: 800;
 
   @include media-lg() {
     font-size: 3.2rem;
@@ -46,30 +46,46 @@ h2,
 
 h3,
 .h3 {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
+  font-weight: 800;
+  margin-bottom: $base-bottom-margin;
 
   @include media-lg() {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
 }
 
 h4,
 .h4 {
-  font-size: 2.2rem;
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin-bottom: $base-bottom-margin;
 
   @include media-lg() {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 }
 
 h5,
 .h5 {
-  font-size: 2rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: $base-bottom-margin;
+
+  @include media-lg() {
+    font-size: 1.6rem;
+  }
 }
 
 h6,
 .h6 {
-  font-size: 1.9rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  margin-bottom: $base-bottom-margin;
+
+  @include media-lg() {
+    font-size: 1.2rem;
+  }
 }
 
 hr {
@@ -87,6 +103,10 @@ p {
   a {
     line-height: 1.7rem;
   }
+}
+
+pre {
+  margin-bottom: 3rem;
 }
 
 .subheading {
