--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "./base/html";
 @import "./base/typography";
 @import "./components/card";
+@import "./components/content-meta";
 @import "./components/intro";
 @import "./components/layout/footer";
 @import "./components/layout/header";
@@ -17,6 +18,7 @@
 @import "./components/toggle";
 @import "./components/toggle-icons";
 @import "./layout/content";
+@import "./pages/my-approach";
 @import "./utility/display";
 @import "./utility/flex";
 @import "./utility/spacing";
