Finish up last MVP post and update syntax highlighting theme

--- a/src/styles/base/_html.scss
+++ b/src/styles/base/_html.scss
@@ -22,6 +22,14 @@ body {
     color: $fg-color-dark-mode;
     background-image: url("/images/symbols-dark.svg");
   }
+
+  @include media-lg() {
+    background-position: center top;
+  }
+}
+
+img {
+  max-width: 100%;
 }
 
 main {
