--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -19,11 +19,16 @@
 }
 
 .card__body {
-  font-size: 1.4rem;
   padding: 1.3rem 2rem 0;
-
+  
   p {
+    font-size: 1.4rem;
     line-height: 2rem;
+    margin-bottom: $base-bottom-margin;
+
+    &:first-of-type {
+      margin-bottom: 0;
+    }
   }
 }
 
