--- a/src/styles/components/_toggle.scss
+++ b/src/styles/components/_toggle.scss
@@ -17,7 +17,7 @@ $switch-increment: 3rem;
 }
 
 .toggle__control {
-  margin: 0 0.5rem;
+  margin: 0 0.5rem 0.4rem;
 }
 
 .toggle__switch {
@@ -26,6 +26,7 @@ $switch-increment: 3rem;
   border-radius: 50%;
   box-shadow: 0px 1px 2px rgb(0 0 0 / 15%);
   cursor: pointer;
+  display: block;
   height: 2rem;
   position: relative;
   top: -$base-bottom-margin;
