Update margins for horizontal rules in latest thoughts

--- a/src/styles/components/thoughts/_latest.scss
+++ b/src/styles/components/thoughts/_latest.scss
@@ -1,3 +1,9 @@
+.latest-thoughts {
+  hr {
+    margin: 1rem -0;
+  }
+}
+
 .latest-thoughts__read-more {
   margin: 2rem 0 $section-bottom-margin;
   text-align: right;
