--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@
 @import "./components/toggle";
 @import "./components/toggle-icons";
 @import "./layout/content";
+@import "./pages/index";
 @import "./pages/my-approach";
 @import "./utility/display";
 @import "./utility/flex";
