Add block quote styles and update code review post

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -39,3 +39,10 @@
   font-weight: 700;
   src: url("/fonts/Nunito/Nunito-BoldItalic.ttf") format("truetype")
 }
+
+@font-face {
+  font-family: RobotoSlab;
+  font-style: normal;
+  font-weight: 300;
+  src: url("/fonts/RobotoSlab/RobotoSlab-Light.ttf") format("truetype")
+}
